# Hatchling

./: .env  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  VERSION  app.py  chat_settings.py  docker-compose.debug.yml  docker-compose.yml  llm_chat.py  llm_model_manager.py  logging_manager.py  mcp_client.py  mcp_manager.py  mcp_server_arithmetics.py  ollama_mcp_adapter.py  pyproject.toml  requirements.txt  run_hatchling.py  session_debug_log.py  setup.py
Hatch/: cli_hatch.py  package_environments.py  package_loader.py  package_manager.py  package_validator.py  registry_retriever.py  requirements.txt  template_generator.py
Hatch-Dev/arithmetic_pkg/: arithmetic.py  hatch_metadata.json
Hatch-Dev/base_pkg_1/: README.md  hatch_metadata.json  server.py
Hatch-Dev/base_pkg_2/: README.md  hatch_metadata.json  server.py
Hatch-Dev/circular_dep_pkg_1/: README.md  hatch_metadata.json  server.py
Hatch-Dev/circular_dep_pkg_2/: README.md  hatch_metadata.json  server.py
Hatch-Dev/complex_dep_pkg/: README.md  hatch_metadata.json  server.py
Hatch-Dev/missing_dep_pkg/: README.md  hatch_metadata.json  server.py
Hatch-Dev/python_dep_pkg/: README.md  hatch_metadata.json  server.py
Hatch-Dev/simple_dep_pkg/: README.md  hatch_metadata.json  server.py
Hatch-Dev/version_dep_pkg/: README.md  hatch_metadata.json  server.py
Hatch-Registry/: hatch_packages_registry.json  registry_updater.py
Hatch-Validator/: dependency_resolver.py  package_validator.py
Hatch-XXX/arithmetic_pkg/: README.md
Hatch-XXX/template_gen/: README.md  hatch_metadata.json  server.py
Hatch/envs/: environments.json
Tests/: run_all_tests.py  test_dependency_resolver.py  test_environment_manager.py  test_package_validator.py  test_registry_updater.py
config/: settings.py
core/chat/: chat_command_handler.py  message_history.py
core/llm/: api_manager.py  chat_session.py  model_manager.py  tool_execution_manager.py
core/logging/: logging_manager.py  session_debug_log.py
doc/articles/: README.md  chat_commands.md  docker-setup.md  installation.md  manual-setup.md  running_hatchling.md
docker/: .env  Dockerfile  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh
hatchling/: __init__.py  app.py
mcp_utils/: client.py  hatch_mcp.py  manager.py  ollama_adapter.py
ui/: cli_chat.py
(+25 files in other folders)
