[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hatchling"
dynamic = ["version"]
description = "LLM with MCP Tool Calling"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Hatch! Team"}
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "ollama>=0.4.8",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "mcp>=1.6.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.1",
    "websockets>=12.0",
    "httpx>=0.25.2",
    "anyio>=3.7.1",
    "prompt_toolkit>=3.0.41",

    "hatch @ git+https://github.com/CrackingShells/Hatch.git"
]

[project.scripts]
hatchling = "hatchling.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.urls]
"Repository" = "https://github.com/CrackingShells/Hatchling"